# drone

./: CLAUDE.md  Cargo.toml  GETTING_STARTED.md  README.md  TODO.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: check.yml  clippy.yml  fmt.yml
src/: main.rs
src/drone/: ground_control.rs  mod.rs  motors.rs  validation.rs
